model is tested, cleaning the code and write the utils for next

--- a/utils/preprocess.ipynb
+++ b/utils/preprocess.ipynb
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
        "'2011_09_29/2011_09_29_drive_0071_sync/image_02_640_192/data/0000000000.png'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,57 +496,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "327d990fece04b07bf3ada4de59dcb7d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=85729), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-31-ac322fb0ccaf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msheet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mimg1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg3\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0msheet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m't0'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msheet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m't1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msheet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m't2'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0mimg1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m         \u001b[0mimg1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimg1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for sheet in (train, val):\n",
-    "    drops = []\n",
-    "    for i in tqdm(range(len(sheet))):\n",
-    "        img1, img2, img3= sheet.loc[i, 't0'], sheet.loc[i, 't1'], sheet.loc[i, 't2']\n",
-    "        img1, img2, img3 = cv2.imread(img1), cv2.imread(img2), cv2.imread(img3)\n",
-    "        img1, img2, img3 = img1.reshape(-1), img2.reshape(-1), img3.reshape(-1)\n",
-    "        \n",
-    "        diff = np.mean(img1-img2)\n",
-    "        diff2 = np.mean(img1-img3)\n",
-    "        diff3 = np.mean(img2-img3)\n",
-    "        \n",
-    "        if diff < 10 or diff2 < 10 or diff3 < 10:\n",
-    "            drops.append(i)\n",
-    "    sheet.drop(drops, axis=0, inplace=True)\n",
-    "        \n",
-    "        "
+    "staticf = Path('static_frames.txt').open()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "staticf = staticf.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2011_09_26', '2011_09_26_drive_0009_sync', '0000000386']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "staticf[0].rstrip().split(' ') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "staticf_folder = [ \"/\".join( line.rstrip().split(' ')[:-1] ) for line in staticf ]\n",
+    "staticf_file = [ line.rstrip().split(' ')[-1]  for line in staticf ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img2, img3 = \"image_02_{0}_{1}\".format(*size), \"image_03_{0}_{1}\".format(*size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count = 0\n",
+    "for f, file in zip(staticf_folder, staticf_file):\n",
+    "    for img in img2, img3:\n",
+    "        path =  Path(f + \"/\" + img + \"/data/\" + file +'.png')\n",
+    "        if path.exists(): \n",
+    "            path.unlink()\n",
+    "            count += 1\n",
+    "            \n",
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for sheet in (train, val):\n",
+    "    drops = [] \n",
+    "    for i in range(len(sheet)):\n",
+    "        for c in (\"t0\",\"t1\",\"t2\"):\n",
+    "            if not Path(sheet.loc[i, c]).exists():\n",
+    "                drops.append(i)\n",
+    "    sheet.drop(drops, axis=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,32 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Int64Index([    0,     1,     2,     3,     4,     5,     6,     7,     8,\n",
-       "                9,\n",
-       "            ...\n",
-       "            85719, 85720, 85721, 85722, 85723, 85724, 85725, 85726, 85727,\n",
-       "            85728],\n",
-       "           dtype='int64', length=85729)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -593,17 +607,42 @@
       "text/plain": [
        "Int64Index([   0,    1,    2,    3,    4,    5,    6,    7,    8,    9,\n",
        "            ...\n",
-       "            9516, 9517, 9518, 9519, 9520, 9521, 9522, 9523, 9524, 9525],\n",
-       "           dtype='int64', length=9526)"
+       "            9460, 9461, 9462, 9463, 9464, 9465, 9466, 9467, 9468, 9469],\n",
+       "           dtype='int64', length=9330)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "val.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([   17,    18,    19,    20,    21,    22,    23,    24,    25,\n",
+       "               26,\n",
+       "            ...\n",
+       "            85719, 85720, 85721, 85722, 85723, 85724, 85725, 85726, 85727,\n",
+       "            85728],\n",
+       "           dtype='int64', length=69600)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.index"
    ]
   },
   {
