--- a/kittidata/preprocess.ipynb
+++ b/kittidata/preprocess.ipynb
@@ -63,38 +63,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'skimage'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-837979b493c2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mskimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mio\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mimread\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimsave\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'skimage'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from skimage.io import imread, imsave"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('.eigen_split.txt', 'r') as f:\n",
-    "    eigen_split = f.readlines()"
+    "with open('eigen_split.txt', 'r') as f:\n",
+    "    eigen_split = f.readlines()\n",
+    "    eigen_split = [e.rstrip() + \"_sync\" for e in eigen_split if e is not \"\\n\"]\n",
+    "    eigen_split = np.array(eigen_split)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(61, 61)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(np.unique(eigen_split)), len(eigen_split)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eigen_split_index = np.random.choice( np.arange(len(eigen_split)).astype(int), replace=False, size=len(eigen_split))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eigen_split_train = eigen_split[eigen_split_index[:len(eigen_split)//2]]\n",
+    "eigen_split_val = eigen_split[eigen_split_index[len(eigen_split)//2:]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([38, 32, 44, 53, 12, 15, 10,  5, 59, 49, 43,  3, 24, 23, 34, 33, 11,\n",
+       "       35, 57, 17, 45, 21, 25, 14, 47, 22, 19,  2,  6, 41, 46, 50, 31, 16,\n",
+       "       40,  0, 54,  4, 13, 56, 27, 39, 37, 28,  9, 51,  7, 42, 29,  8, 60,\n",
+       "       48, 58, 20,  1, 18, 26, 30, 52, 55, 36])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eigen_split_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "61"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(np.unique(eigen_split_index))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(eigen_split_train) & set(eigen_split_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,19 +227,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "if USE_CV:\n",
     "    size = (640, 192)\n",
+    "    org_size = (1242, 375)\n",
     "else:\n",
-    "    size = (192, 640)"
+    "    size = (192, 640)\n",
+    "    org_size = (375, 1242)\n",
+    "dscale = np.array(size)/np.array(org_size)\n",
+    "dscale = np.concatenate((dscale, dscale))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.51529791, 0.512     , 0.51529791, 0.512     ])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dscale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +276,7 @@
        " PosixPath('2011_10_03')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,9 +315,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "95869"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "timgs0, timgs1, timgs2, paras = [], [], [], []\n",
     "\n",
@@ -212,7 +339,7 @@
     "for root in roots:\n",
     "    folders = root.glob(\"*_sync\")\n",
     "    for folder in folders:\n",
-    "        if folder not in eigen_split: continue\n",
+    "        #if folder.name not in eigen_split: continue\n",
     "            \n",
     "        img02 = folder /'image_02'/'data'\n",
     "        img03 = folder /'image_03'/'data'\n",
@@ -231,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,9 +376,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15979"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ncores = 6\n",
     "space = int( total / ncores ) + 1 \n",
@@ -261,11 +399,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15979/15979 [00:05<00:00, 2942.95it/s]\n",
+      "100%|██████████| 15974/15974 [00:07<00:00, 2004.11it/s]\n",
+      " 79%|███████▉  | 12627/15979 [04:33<00:05, 609.36it/s]"
+     ]
+    }
+   ],
    "source": [
-    "\n",
     "for num in range(ncores):\n",
     "    p = Process(target=f,\n",
     "                args=(readimgs[space*num: space*(num+1)],\n",
@@ -279,11 +426,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for p in ps: p.close()\n"
+    "for p in ps: p.terminate()"
    ]
   },
   {
@@ -305,7 +452,7 @@
     "for root in roots:\n",
     "    folders = root.glob(\"*_sync\")\n",
     "    for folder in folders:\n",
-    "        if folder not in eigen_split: continue\n",
+    "        #if folder.name not in eigen_split: continue\n",
     "            \n",
     "        img02 = folder /'image_02'/'data'\n",
     "        img03 = folder /'image_03'/'data'\n",
@@ -328,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,79 +505,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "timgs0, timgs1, timgs2, paras = [], [], [], []\n",
-    "for root in roots:\n",
-    "    para = get_campara(root)\n",
-    "    folders = root.glob(\"*_sync\")\n",
-    "    for folder in folders:\n",
-    "        if folder not in eigen_split: continue\n",
-    "            \n",
-    "        img02r = folder /'image_02_{}_{}'.format(*size)/'data'\n",
-    "        img03r = folder /'image_03_{}_{}'.format(*size)/'data'\n",
-    "        \n",
-    "        for which in (img02r, img03r):\n",
-    "            imgs = sorted([str(img) for img in which.iterdir()])\n",
-    "            imgs0, imgs1, imgs2 = gene_tri(imgs)\n",
-    "            timgs0 += imgs0\n",
-    "            timgs1 += imgs1\n",
-    "            timgs2 += imgs2\n",
-    "            paras += [para]*len(imgs0)\n",
-    "paras = tuple(zip(*paras))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train = pd.DataFrame(dict(t0=timgs0, t1=timgs1,t2=timgs2,\n",
+    "for name, split in zip((\"training\" , \"validation\"), (eigen_split_train, eigen_split_val)):\n",
+    "    timgs0, timgs1, timgs2, paras = [], [], [], []\n",
+    "    for root in roots:\n",
+    "        para = get_campara(root)\n",
+    "        folders = root.glob(\"*_sync\")\n",
+    "        for folder in folders:\n",
+    "            if folder.name not in split: continue\n",
+    "\n",
+    "            img02r = folder /'image_02_{}_{}'.format(*size)/'data'\n",
+    "            img03r = folder /'image_03_{}_{}'.format(*size)/'data'\n",
+    "\n",
+    "            for which in (img02r, img03r):\n",
+    "                imgs = sorted([str(img) for img in which.iterdir()])\n",
+    "                imgs0, imgs1, imgs2 = gene_tri(imgs)\n",
+    "                timgs0 += imgs0\n",
+    "                timgs1 += imgs1\n",
+    "                timgs2 += imgs2\n",
+    "                paras += [para]*len(imgs0)\n",
+    "    paras = tuple(zip(*paras))\n",
+    "    \n",
+    "    train = pd.DataFrame(dict(t0=timgs0, t1=timgs1,t2=timgs2,\n",
     "                          fx=paras[0],fy=paras[1],\n",
     "                          cx=paras[2],cy=paras[3])\n",
     "                    )\n",
     "\n",
-    "train[['fx','fy','cx','cy']]=train[['fx','fy','cx','cy']]/2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train.head()\n",
-    "\n",
-    "val = train.iloc[int(len(train)*0.9):]\n",
-    "train = train.iloc[:int(len(train)*0.9)]\n",
-    "\n",
-    "if USE_CV:\n",
-    "    val.to_csv('validation_{1}_{0}.csv'.format(*size), index=False)\n",
-    "    train.to_csv('training_{1}_{0}.csv'.format(*size), index=False);\n",
-    "else:\n",
-    "    val.to_csv('validation_{}_{}.csv'.format(*size), index=False)\n",
-    "    train.to_csv('training_{}_{}.csv'.format(*size), index=False);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "val.head()"
+    "    train[['fx','fy','cx','cy']]=train[['fx','fy','cx','cy']]*dscale\n",
+    "    \n",
+    "    \n",
+    "    if USE_CV:\n",
+    "        train.to_csv('{0}_{2}_{1}.csv'.format(name, *size), index=False)\n",
+    "    else:\n",
+    "        train.to_csv('{}_{}_{}.csv'.format(name, *size), index=False)"
    ]
   },
   {
@@ -442,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,16 +566,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2011_09_29/2011_09_29_drive_0071_sync/image_02_640_192/data/0000000000.png'"
+       "'2011_09_29/2011_09_29_drive_0004_sync/image_02_640_192/data/0000000000.png'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,27 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "drops"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +613,7 @@
        "['2011_09_26', '2011_09_26_drive_0009_sync', '0000000386']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,9 +643,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16071"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "count = 0\n",
     "for f, file in zip(staticf_folder, staticf_file):\n",
@@ -570,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,19 +700,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Int64Index([   0,    1,    2,    3,    4,    5,    6,    7,    8,    9,\n",
+       "Int64Index([   17,    18,    19,    20,    21,    22,    23,    24,    25,\n",
+       "               26,\n",
        "            ...\n",
-       "            9460, 9461, 9462, 9463, 9464, 9465, 9466, 9467, 9468, 9469],\n",
-       "           dtype='int64', length=9330)"
+       "            36754, 36755, 36756, 36757, 36758, 36759, 36760, 36761, 36762,\n",
+       "            36763],\n",
+       "           dtype='int64', length=33744)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,21 +725,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Int64Index([   17,    18,    19,    20,    21,    22,    23,    24,    25,\n",
-       "               26,\n",
+       "Int64Index([    0,     1,     2,     3,     4,     5,     6,     7,     8,\n",
+       "                9,\n",
        "            ...\n",
-       "            85719, 85720, 85721, 85722, 85723, 85724, 85725, 85726, 85727,\n",
-       "            85728],\n",
-       "           dtype='int64', length=69600)"
+       "            47690, 47691, 47692, 47693, 47694, 47695, 47696, 47697, 47698,\n",
+       "            47699],\n",
+       "           dtype='int64', length=44740)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +758,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -669,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
