A more detail test on each part (check GearTest) and it should ready to run. Some old functions in models.py is moved to old.py. A image from kitti dataset is added as a test image

--- a/kittidata/preprocess.ipynb
+++ b/kittidata/preprocess.ipynb
@@ -4,18 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/paperspace/anaconda3/envs/fastai/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n",
-      "/home/paperspace/anaconda3/envs/fastai/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import namedtuple\n",
     "import pandas as pd\n",
@@ -479,7 +468,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CAMPARA = namedtuple('campara',['fx','fy','cx','cy'])\n",
+    "# CAMPARA = namedtuple('campara',['fx','fy','cx','cy'])\n",
     "def get_campara(date):\n",
     "    cam = date/'calib_cam_to_cam.txt'\n",
     "    camret = {}\n",
@@ -489,8 +478,10 @@
     "            k, v = kv[0], kv[1]\n",
     "            v= v.split(' ')[1:]\n",
     "            camret[k] = v\n",
-    "    cam2para = np.array(tuple(float(e) for e in camret['P_rect_02'])).reshape(3,4)\n",
-    "    return CAMPARA(fx = cam2para[0,0], fy = cam2para[1,1], cx = cam2para[0,2], cy = cam2para[1,2])"
+    "#     cam2para_2 = np.array(tuple(float(e) for e in camret['P_rect_02'])) #.reshape(3,4)\n",
+    "#     cam2para_3 = np.array(tuple(float(e) for e in camret['P_rect_03']))#.reshape(3,4)\n",
+    "    return CAMPARA(fx = cam2para[0,0], fy = cam2para[1,1], cx = cam2para[0,2], cy = cam2para[1,2])\n",
+    "#     return cam2para_2, cam2para_3"
    ]
   },
   {
@@ -512,7 +503,8 @@
     "for name, split in zip((\"training\" , \"validation\"), (eigen_split_train, eigen_split_val)):\n",
     "    timgs0, timgs1, timgs2, paras = [], [], [], []\n",
     "    for root in roots:\n",
-    "        para = get_campara(root)\n",
+    "        para2, para3 = get_campara(root)\n",
+    "        inv_2, inv_3\n",
     "        folders = root.glob(\"*_sync\")\n",
     "        for folder in folders:\n",
     "            if folder.name not in split: continue\n",
@@ -520,13 +512,15 @@
     "            img02r = folder /'image_02_{}_{}'.format(*size)/'data'\n",
     "            img03r = folder /'image_03_{}_{}'.format(*size)/'data'\n",
     "\n",
-    "            for which in (img02r, img03r):\n",
+    "            for which, para in zip(((img02r, img03r),(para2,para3))):\n",
     "                imgs = sorted([str(img) for img in which.iterdir()])\n",
     "                imgs0, imgs1, imgs2 = gene_tri(imgs)\n",
     "                timgs0 += imgs0\n",
     "                timgs1 += imgs1\n",
     "                timgs2 += imgs2\n",
     "                paras += [para]*len(imgs0)\n",
+    "                \n",
+    "#     paras = np.stack(paras, axis=0)\n",
     "    paras = tuple(zip(*paras))\n",
     "    \n",
     "    train = pd.DataFrame(dict(t0=timgs0, t1=timgs1,t2=timgs2,\n",
